# launch

./: .gitignore  CMakeLists.txt  README.md  flake.nix  package.nix
src/: cache.hh  desktop_mode.cc  desktop_mode.hh  exec_mode.cc  exec_mode.hh  helloworld.cc  helloworld.hh  hypr_mode.cc  hypr_mode.hh  main.cc  mode.hh  row.cc  row.hh  window.cc  window.hh
